[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "struct_func"
path = "src/struct_func.rs"

[[bin]]
name = "struct_func2"
path = "src/struct_func2.rs"

[[bin]]
name = "struct_method"
path = "src/struct_method.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"
